@@ -1,5 +1,9 @@
 2018-03-09  Jason Merrill  <jason@redhat.com>
 
+	PR c++/84770 - ICE with typedef and parameter pack.
+	* pt.c (verify_unstripped_args_1): Split out from
+	verify_unstripped_args.
+
 	PR c++/84785 - ICE with alias template and default targs.
 	* pt.c (type_unification_real): Set processing_template_decl if
 	saw_undeduced == 1.
